{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 40,
  "lineage": "06ad0d1c-2995-3bd4-dd43-213a99ea0bcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:internet-gateway/igw-05c75131935a2b815",
            "id": "igw-05c75131935a2b815",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "tags": {
              "Name": "tasks-api-igw",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-igw",
              "app": "tasks-api",
              "env": "dev"
            },
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/tasks-api-alb/c47d17731cbfd6ac",
            "arn_suffix": "app/tasks-api-alb/c47d17731cbfd6ac",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tasks-api-alb-511598001.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/tasks-api-alb/c47d17731cbfd6ac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tasks-api-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0991ea052ef6ec523"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e1bf452c54dcec6"
              },
              {
                "subnet_id": "subnet-0c62bfb0d82820d4b"
              }
            ],
            "subnets": [
              "subnet-04e1bf452c54dcec6",
              "subnet-0c62bfb0d82820d4b"
            ],
            "tags": {
              "Name": "tasks-api-alb",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-alb",
              "app": "tasks-api",
              "env": "dev"
            },
            "vpc_id": "vpc-0c68c5a85cde98bb7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/tasks-api-alb/c47d17731cbfd6ac"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/tasks-api-alb/c47d17731cbfd6ac/8a80a3d6e3990e18",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/tasks-api-tg/f8b063801d03a350",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/tasks-api-alb/c47d17731cbfd6ac/8a80a3d6e3990e18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/tasks-api-alb/c47d17731cbfd6ac",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/tasks-api-alb/c47d17731cbfd6ac/8a80a3d6e3990e18"
          },
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/tasks-api-tg/f8b063801d03a350",
            "arn_suffix": "targetgroup/tasks-api-tg/f8b063801d03a350",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/tasks",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/tasks-api-tg/f8b063801d03a350",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/tasks-api-alb/c47d17731cbfd6ac"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tasks-api-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tasks-api-tg",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-tg",
              "app": "tasks-api",
              "env": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/tasks-api-tg/f8b063801d03a350"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:route-table/rtb-0fc97beddf207a472",
            "id": "rtb-0fc97beddf207a472",
            "owner_id": "273505519511",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c75131935a2b815",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tasks-api-public-rt",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-public-rt",
              "app": "tasks-api",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "rtb-0fc97beddf207a472",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6b7b074c97f02b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc97beddf207a472",
            "subnet_id": "subnet-04e1bf452c54dcec6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b7d173bf9dd3acb",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc97beddf207a472",
            "subnet_id": "subnet-0c62bfb0d82820d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-0991ea052ef6ec523",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0991ea052ef6ec523",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tasks-api-alb-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tasks-api-alb-sg",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-alb-sg",
              "app": "tasks-api",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "sg-0991ea052ef6ec523",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-070646b617f2729fb",
            "description": "Service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070646b617f2729fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0991ea052ef6ec523"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "tasks-api-svc-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tasks-api-svc-sg",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-svc-sg",
              "app": "tasks-api",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "sg-070646b617f2729fb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-04e1bf452c54dcec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e1bf452c54dcec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tasks-api-public-a",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-public-a",
              "app": "tasks-api",
              "env": "dev"
            },
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "subnet-04e1bf452c54dcec6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-0c62bfb0d82820d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c62bfb0d82820d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tasks-api-public-b",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-public-b",
              "app": "tasks-api",
              "env": "dev"
            },
            "vpc_id": "vpc-0c68c5a85cde98bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "subnet-0c62bfb0d82820d4b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc/vpc-0c68c5a85cde98bb7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ff3057c2d3d56f48",
            "default_route_table_id": "rtb-0dc252ad568f80fa3",
            "default_security_group_id": "sg-0bdc31a4e31bd58f0",
            "dhcp_options_id": "dopt-0976e74362cde68ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c68c5a85cde98bb7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc252ad568f80fa3",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "tags": {
              "Name": "tasks-api-vpc",
              "app": "tasks-api",
              "env": "dev"
            },
            "tags_all": {
              "Name": "tasks-api-vpc",
              "app": "tasks-api",
              "env": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpc-0c68c5a85cde98bb7",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}